--- a/Movies/Podfile
+++ b/Movies/Podfile
@@ -11,6 +11,7 @@ def installedPods
     pod 'PureLayout'
     pod 'Localize-Swift', '~> 1.7'
     pod 'SVProgressHUD'
+    pod 'ESPullToRefresh'
 
     # Logging, Cache
     pod 'Kingfisher'
@@ -18,6 +19,11 @@ def installedPods
 
     # Utilities
     pod 'Bolts-Swift'
+    pod 'SwifterSwift'
+end
+
+def testingPods
+    pod 'Nimble'
 end
 
 target 'Movies' do
@@ -27,9 +33,13 @@ target 'Movies' do
   # Pods for Movies
   installedPods
 
-  target 'MoviesTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
 
+
+end
+
+target 'MoviesTests' do
+    use_frameworks!
+    # Pods for testing
+    installedPods
+    testingPods
 end
